--- a/src/blocks/proposal/proposal__el-list-el-title.css
+++ b/src/blocks/proposal/proposal__el-list-el-title.css
@@ -4,3 +4,9 @@
   line-height: 150%;
   color: #828282;
 }
+
+@media (max-width: 601px) {
+  .proposal__el-list-el-title {
+    font-size: 12px;
+  }
+}
