--- a/src/blocks/proposal/proposal__title-block.css
+++ b/src/blocks/proposal/proposal__title-block.css
@@ -4,3 +4,12 @@
   justify-content: space-between;
   margin-bottom: 78px;
 }
+
+@media (max-width: 601px) {
+  .proposal__title-block {
+    flex-direction: column;
+    gap: 46px;
+    max-width: 300px;
+    margin: 0 auto 30px;
+  }
+}
