--- a/src/blocks/reviews/reviews__pre-form.css
+++ b/src/blocks/reviews/reviews__pre-form.css
@@ -12,3 +12,12 @@
   background-size: cover;
   border-radius: 40px;
 }
+
+@media (max-width: 601px) {
+  .reviews__pre-form {
+    flex-direction: column;
+    gap: 30px;
+    padding: 40px 26px;
+    border-radius: 20px;
+  }
+}
