--- a/src/blocks/section-top/section-top__button.css
+++ b/src/blocks/section-top/section-top__button.css
@@ -1,3 +1,9 @@
 .section-top__button {
   max-width: 323px;
 }
+
+@media (max-width: 601px) {
+  .section-top__button {
+    max-width: 247px;
+  }
+}
