--- a/src/blocks/support/support__navigation-el-img.css
+++ b/src/blocks/support/support__navigation-el-img.css
@@ -19,3 +19,9 @@
   visibility: visible;
   opacity: 1;
 }
+
+@media (max-width: 601px) {
+  .support__navigation-el-img {
+    display: none;
+  }
+}
