--- a/src/blocks/support/support__navigation-el-title.css
+++ b/src/blocks/support/support__navigation-el-title.css
@@ -12,3 +12,13 @@
 .support__navigation-el_hover .support__navigation-el-title {
   color: #171818;
 }
+
+@media (max-width: 601px) {
+  .support__navigation-el-title {
+    font-size: 20px;
+  }
+
+  .support__navigation-el_hover .support__navigation-el-title {
+    color: #fff;
+  }
+}
