--- a/src/blocks/proposal/proposal__el-content-wrapper.css
+++ b/src/blocks/proposal/proposal__el-content-wrapper.css
@@ -2,3 +2,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media (max-width: 601px) {
+  .proposal__el-content-wrapper {
+    flex-direction: column;
+  }
+}
