--- a/src/blocks/proposal/proposal__el-description.css
+++ b/src/blocks/proposal/proposal__el-description.css
@@ -18,3 +18,22 @@
 
   background-color: #fff;
 }
+
+@media (max-width: 601px) {
+  .proposal__el-description {
+    max-width: 180px;
+    margin-bottom: 20px;
+    margin-left: 34px;
+    font-size: 14px;
+  }
+
+  .proposal__el-description::before {
+    top: 10px;
+    left: -14px;
+    width: 20px;
+  }
+
+  .proposal__container-top + .proposal__el .proposal__el-description {
+    max-width: 266px;
+  }
+}
