--- a/src/blocks/proposal/proposal__el-slider.css
+++ b/src/blocks/proposal/proposal__el-slider.css
@@ -19,3 +19,57 @@
 .proposal__el-slider .slider-btn-prev {
   right: 110px;
 }
+
+@media (max-width: 601px) {
+  .proposal__el-slider {
+    width: 300px;
+    height: 293px;
+  }
+
+  .proposal__el-slider .slider-btn {
+    position: absolute;
+    z-index: 2;
+    right: 26px;
+    bottom: 20px;
+
+    width: 50px;
+    height: 50px;
+  }
+
+  .slider-btn-prev:hover {
+    transform: none;
+  }
+
+  .slider-btn-next:hover {
+    transform: rotate(180deg);
+  }
+
+  .slider-btn-prev:active {
+    transform: scale(0.9);
+  }
+
+  .slider-btn-next:active {
+    transform: rotate(180deg) scale(0.9);
+  }
+
+  .proposal__el-slider .slider-btn svg {
+    transform: scale(0.71);
+  }
+
+  .proposal__el-slider .slider-btn-prev {
+    right: 92px;
+  }
+
+  .proposal__el-slider-img {
+    width: 300px;
+    height: 293px;
+    object-fit: cover;
+  }
+
+  .proposal__el-slider .slick-dots {
+    bottom: 39px;
+    left: 26px;
+    gap: 14px;
+    padding: 0;
+  }
+}
