--- a/src/blocks/proposal/proposal__el-subtitle.css
+++ b/src/blocks/proposal/proposal__el-subtitle.css
@@ -7,3 +7,10 @@
   font-size: 26px;
   line-height: 140%;
 }
+
+@media (max-width: 601px) {
+  .proposal__el-subtitle {
+    margin-bottom: 35px;
+    font-size: 18px;
+  }
+}
