--- a/src/blocks/reviews/reviews.css
+++ b/src/blocks/reviews/reviews.css
@@ -1,3 +1,12 @@
 .reviews {
+  position: relative;
+  z-index: 5;
   padding-bottom: 100px;
+  background-color: black;
+}
+
+@media (max-width: 601px) {
+  .reviews {
+    overflow: hidden;
+  }
 }
