--- a/src/blocks/reviews/reviews__content.css
+++ b/src/blocks/reviews/reviews__content.css
@@ -9,3 +9,14 @@
   padding-top: 165px;
   padding-left: 20px;
 }
+
+@media (max-width: 601px) {
+  .reviews__content {
+    flex-direction: column;
+
+    max-width: 340px;
+    margin: 0 auto;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
