--- a/src/blocks/reviews/reviews__slider-block.css
+++ b/src/blocks/reviews/reviews__slider-block.css
@@ -2,3 +2,22 @@
   overflow: hidden;
   max-width: 870px;
 }
+
+@media (max-width: 601px) {
+  .reviews__slider-block {
+    position: relative;
+
+    overflow: visible;
+
+    max-width: 100%;
+    margin-bottom: 78px;
+    padding-bottom: 42px;
+  }
+
+  .reviews__slider-block .slick-dots {
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    gap: 14px;
+  }
+}
