--- a/src/blocks/section-top/section-top__bb.css
+++ b/src/blocks/section-top/section-top__bb.css
@@ -4,3 +4,9 @@
   justify-content: space-between;
   margin-left: 80px;
 }
+
+@media (max-width: 601px) {
+  .section-top__bb {
+    margin-left: 0;
+  }
+}
