--- a/src/blocks/section-top/section-top__container.css
+++ b/src/blocks/section-top/section-top__container.css
@@ -20,8 +20,7 @@
 
 @media (max-width: 601px) {
   .section-top__container {
-    padding-top: 70px !important;
-    padding-bottom: 50px;
+    padding-bottom: min(160px, max(calc(100vh - 510px), 20px));
   }
 }
 @media (max-width: 840px) {
