--- a/src/blocks/steps/steps__slider.css
+++ b/src/blocks/steps/steps__slider.css
@@ -2,5 +2,13 @@
   display: flex;
   flex-direction: column;
   gap: 60px;
+
   max-width: 519px;
+  height: fit-content;
+
+  transition: transform 0.5s ease;
+}
+
+.steps__title-block {
+  position: relative;
 }
