added support for < 601px resolution for the block business-model

--- a/src/blocks/business-model/business-model.css
+++ b/src/blocks/business-model/business-model.css
@@ -3,3 +3,9 @@
   padding-bottom: 37px;
   background: #171818;
 }
+
+@media (max-width: 601px) {
+  .business-model {
+    overflow: hidden;
+  }
+}
