--- a/src/blocks/business-model/business-model__progress-bar.css
+++ b/src/blocks/business-model/business-model__progress-bar.css
@@ -6,3 +6,9 @@
   max-width: 1380px;
   margin: 0 auto;
 }
+
+@media (max-width: 601px) {
+  .business-model__progress-bar {
+    width: fit-content;
+  }
+}
