--- a/src/blocks/business-model/business-model__city-info-el-city.css
+++ b/src/blocks/business-model/business-model__city-info-el-city.css
@@ -3,3 +3,9 @@
   font-size: 26px;
   line-height: 140%;
 }
+
+@media (max-width: 601px) {
+  .business-model__city-info-el-city {
+    font-size: 18px;
+  }
+}
