--- a/src/blocks/business-model/business-model__city-info-list.css
+++ b/src/blocks/business-model/business-model__city-info-list.css
@@ -3,4 +3,15 @@
   top: 318px;
   left: 50%;
   transform: translateX(150px);
+
+  width: fit-content;
+}
+
+@media (max-width: 601px) {
+  .business-model__city-info-list {
+    position: absolute;
+    top: 173px;
+    left: 50%;
+    transform: none;
+  }
 }
