--- a/src/blocks/business-model/business-model__progress-bar-toddler.css
+++ b/src/blocks/business-model/business-model__progress-bar-toddler.css
@@ -9,3 +9,14 @@
   background: linear-gradient(270deg, #2794f9 0%, #0c5fdb 100%);
   border-radius: 50%;
 }
+
+@media (max-width: 601px) {
+  .business-model__progress-bar-toddler {
+    z-index: 2;
+    left: calc(100vw / 2);
+    transform: translateX(-50%);
+
+    width: 16px;
+    height: 16px;
+  }
+}
