--- a/src/blocks/business-model/business-model__progress-bar-wrap.css
+++ b/src/blocks/business-model/business-model__progress-bar-wrap.css
@@ -1,3 +1,9 @@
 .business-model__progress-bar-wrap {
   position: relative;
 }
+
+@media (max-width: 601px) {
+  .business-model__progress-bar-wrap {
+    width: fit-content;
+  }
+}
