--- a/src/style/index.css
+++ b/src/style/index.css
@@ -273,6 +273,34 @@
   position: sticky;
 }
 
+.business-model__progress-bar-wrapper {
+  overflow: hidden;
+  max-width: 100%;
+  padding-bottom: 5px;
+}
+
+.business-model__progress-bar-img-mob {
+  display: none;
+}
+
+@media (max-width: 601px) {
+  .business-model__progress-bar-img {
+    display: none;
+  }
+
+  .business-model__progress-bar-img-mob {
+    position: relative;
+    top: 3px;
+
+    display: block;
+
+    width: fit-content;
+    max-width: fit-content;
+
+    transition: transform 0.5s ease;
+  }
+}
+
 @import url("../blocks/galery/galery.css");
 @import url("../blocks/galery/galery__content.css");
 @import url("../blocks/galery/galery__title.css");
