added support for < 601px resolution for the block steps

--- a/src/blocks/steps/steps__description.css
+++ b/src/blocks/steps/steps__description.css
@@ -4,3 +4,10 @@
   line-height: 140%;
   text-align: center;
 }
+
+@media (max-width: 601px) {
+  .steps__description {
+    max-width: 222px;
+    font-size: 12px;
+  }
+}
