--- a/src/blocks/steps/steps__content.css
+++ b/src/blocks/steps/steps__content.css
@@ -2,3 +2,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media (max-width: 601px) {
+  .steps__content {
+    flex-direction: column;
+  }
+}
