--- a/src/blocks/steps/steps__title-block.css
+++ b/src/blocks/steps/steps__title-block.css
@@ -8,3 +8,12 @@
   height: 602px;
   margin-top: 199px;
 }
+
+@media (max-width: 601px) {
+  .steps__title-block {
+    width: 300px;
+    height: 300px;
+    margin-top: 94px;
+    margin-bottom: 15px;
+  }
+}
