--- a/src/blocks/galery/galery__title.css
+++ b/src/blocks/galery/galery__title.css
@@ -14,3 +14,10 @@
   line-height: 110%;
   text-align: center;
 }
+
+@media (max-width: 601px) {
+  .galery__title {
+    max-width: 264.43px;
+    font-size: 26px;
+  }
+}
