--- a/src/style/index.css
+++ b/src/style/index.css
@@ -374,6 +374,10 @@
   }
 }
 
+.galery {
+  /* background-color: aquamarine; */
+}
+
 @import url("../blocks/galery/galery.css");
 @import url("../blocks/galery/galery__content.css");
 @import url("../blocks/galery/galery__title.css");
