--- a/src/blocks/cities/cities__title.css
+++ b/src/blocks/cities/cities__title.css
@@ -5,3 +5,9 @@
 .cities__title .text_green {
   display: block;
 }
+
+@media (max-width: 601px) {
+  .cities__title {
+    margin-bottom: 27px;
+  }
+}
