--- a/src/style/index.css
+++ b/src/style/index.css
@@ -283,6 +283,13 @@
 @import url("../blocks/cities/cities__el-num.css");
 @import url("../blocks/cities/cities__el-img.css");
 
+.cities__slider-mobile-el {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-bottom: 36px;
+}
+
 @import url("../blocks/bottom-block/bottom-block.css");
 @import url("../blocks/bottom-block/bottom-block__container.css");
 @import url("../blocks/bottom-block/bottom-block__content.css");
